--- a/style/pages/sub/_sub__content.scss
+++ b/style/pages/sub/_sub__content.scss
@@ -323,6 +323,8 @@ button.mo_only {display: none;}
 .data--open.on .data__toggle {color: #21A366;}
 .data--open.on .arrow__top { display: block;}
 .data--open.on .arrow__bottom { display: none;}
+// 2024-11-11 이민혁 추가
+.data--openTotal {margin-left: auto; padding-right: 2.6rem; font-weight: 700;}
 
 // 데이터 오픈 바디 (회계공시 열람, 등록 페이지에서만 사용)
 .mo__slide {padding: 0 1rem;}
@@ -331,12 +333,17 @@ button.mo_only {display: none;}
 .mo__slide > table th {background: transparent;}
 .mo__slide > table .sub__element {font-weight: 700;font-size: 1.8rem;}
 .mo__slide > table tbody tr td:last-child {margin-bottom: 3rem;}
-// 모바일 슬라이드 액티브 스타일
-.mo__slide > table tbody tr td:first-of-type {margin-top: 2rem; background: #DEEBF7;} // 총계 액티브 스타일
+// 모바일 슬라이드 1depth 액티브 스타일
+.mo__slide > .mo__slide-active tbody tr td:first-of-type {background: #DEEBF7;}
+.mo__slide > table tbody tr td:first-of-type {margin-top: 2rem;} // 총계 액티브 스타일
 .mo__slide > table tr.style1 > td {background: #DEEBF7;}
 .mo__slide > table tr.style1 .sub__element {background: transparent;} 
 .mo__slide > table td td:first-of-type {background: #DEEBF7;}
 // 모바일 슬라이드 서브 스타일
+.sub__t__title {cursor: pointer; font-size: 1.8rem;}
+.sub__t__title > span {display: flex; align-items: center;}
+.sub__t__title::after {content: ''; width: 1.6rem; height: 1.6rem; background: url(../img/acordian__arrow__down.png) no-repeat center; align-self: center;}
+.sub__t__title.is-subopen::after{transform: rotate(180deg);}
 .mo__slide > table .sub__element td {display: flex; align-items: center;}
 .mo__slide > table .sub__element span {display: flex; align-items: center;}
 .mo__slide > table .sub__element::after {content: ''; height: 1px; background-color: #ddd; flex: 1; margin-left: 1rem;}
