--- a/style/pages/sub/_sub__content.scss
+++ b/style/pages/sub/_sub__content.scss
@@ -295,16 +295,22 @@ button.mo_only {display: none;}
 .mobile__tab .swiper-slide button {width: 100%;height: 100%;color: #555555;background: transparent;font-size: 1.9rem;padding: 2rem 1.6rem;white-space: nowrap;border-bottom: 0.2rem solid #ddd;font-weight: 700;}
 .mobile__tab .swiper-button-next {border-radius: 50%;background: url(../img/mo__tab__next.png) no-repeat center;background-size: 100% auto;box-shadow: 0 0 0.4rem 0 rgba(0, 0, 0, 0.25);}
 .mobile__tab .swiper-button-prev {border-radius: 50%;background: url(../img/mo__tab__prev.png) no-repeat center;background-size: 100% auto;box-shadow: 0 0 0.4rem 0 rgba(0, 0, 0, 0.25);}
-.mobile__tab .swiper-button-next,
-.mobile__tab .swiper-button-prev {position: absolute;z-index: 66;width: 2.4rem;height: 2.4rem;margin-top: 0;margin-top: calc(0px - 1.2rem);}
-.mobile__tab .swiper-button-next::after,
-.mobile__tab .swiper-button-prev::after {font-size: 0;width: 100%;height: 100%;z-index: 21;position: absolute;left: 0;top: 0;}
-.mobile__tab .swiper-button-next::after {background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(255, 255, 255));padding: 0.8rem 1.6rem 0.8rem 3.2rem;}
-.mobile__tab .swiper-button-prev::after {background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgb(255, 255, 255));padding: 0.8rem 3.2rem 0.8rem 1.6rem;}
+
 .mobile__tab .swiper-slide button.active {color: #21A366;position: relative;}
 .mobile__tab .swiper-slide button.active::after {content: "";position: absolute;bottom: 0;left: 0;width: 100%;height: 0.4rem;background-color: #21a366;}
 .mobile__tab .swiper-slide button.active {color: #21A366; position: relative;}
 .mobile__tab .swiper-slide button.active::after {content: ''; position: absolute;bottom: 0;left: 0;width: 100%;height: 0.4rem;background-color: #21a366;}
+
+/* 20241120 이민혁 버튼 비활성화 스타일 초기화 */
+.mobile__tab .swiper-button-next.swiper-button-disabled, .mobile__tab .swiper-button-prev.swiper-button-disabled {opacity: 0;}
+.mobile__tab .swiper-button-next,
+.mobile__tab .swiper-button-prev {position: absolute; z-index: 66; width: 2.4rem; height: 2.4rem; margin-top: 0; margin-top: calc(0px - 1.2rem);}
+.mobile__tab .swiper-button-next::after,
+.mobile__tab .swiper-button-prev::after {font-size: 0; width: 100%; height: 100%; z-index: 21; position: absolute; left: 0; top: 0;}
+// 20241120 이민혁 스타일 초기화
+// .mobile__tab .swiper-button-next::after {background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(255, 255, 255));padding: 0.8rem 1.6rem 0.8rem 3.2rem;}
+// .mobile__tab .swiper-button-prev::before {background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgb(255, 255, 255));padding: 0.8rem 3.2rem 0.8rem 1.6rem;}
+
 @media all and (min-width: 551px) and (max-width: 766px) {.content .mobile__tab .swiper .swiper-slide {max-width: 25%;}}
 @media all and (max-width: 550px) {.content .mobile__tab .swiper .swiper-slide { max-width: 13rem;}}
 
@@ -353,6 +359,12 @@ button.mo_only {display: none;}
 /* 20241120 이민혁 수정 */ 
 .register__table.depth-margin .depth-2 {margin-left: 1.6rem;}
 .register__table.depth-margin .depth-3 {margin-left: 3.2rem;}
+/* input값 초기화 */
+.input-txtReset input[type="text"]{ border: 0; min-height: auto; padding: 0; font-size: inherit; border-radius: 0;}
+.input-txtReset input[type="text"]:focus{ outline: none;}
+.t__title input[type="text"]{font-weight: 700;}
+
+
 
 
 
@@ -368,11 +380,12 @@ button.mo_only {display: none;}
 .mo__slide > table .sub__element td {display: flex; align-items: center;}
 .mo__slide > table .sub__element span {display: flex; align-items: center;}
 .mo__slide > table .sub__element::after {content: ''; height: 1px; background-color: #ddd; flex: 1; margin-left: 1rem;}
-.mo__slide > table .t__title {padding-top: 2rem; padding-bottom: 1rem; border-bottom: 0.1rem solid #ddd; display: flex; justify-content: space-between; cursor: pointer;}
+.mo__slide > table .t__title {padding-top: 2rem; padding-bottom: 1rem; border-bottom: 0.1rem solid #ddd; display: flex; justify-content: space-between;}
 .mo__slide > table tr.is-open .t__title.arrow::after {transform: rotate(180deg);}
 .t__title.arrow::after { content: ''; width: 1.6rem; height: 1.6rem; background: url(../img/acordian__arrow__down.png) no-repeat center; align-self: center;}
 .t__title.arrow > span {margin-left: auto; margin-right: .8rem;}
 
+.mo__slide .acordian__table .t__title {cursor: pointer;}
 .mo__slide .acordian__table tr td {display: none;}
 .mo__slide > table tr td {margin-top: 2rem; display: flex; align-items: center; justify-content: space-between;}
 .mo__slide input {text-align: right;}
